docs: reformat donation page
- split text paragraphs
- fix unnecessary section header in menu
- add github avatars for better user recognition
- update bastimeyer's donation links

--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -46,6 +46,15 @@ html .wy-grid-for-nav {
 .github-buttons {
   margin: 1rem 0 0;
 }
+.github-avatar {
+  float: left;
+  width: 150px;
+  height: 150px;
+  margin: 0 1rem 1rem 0;
+}
+.github-avatar + .container > ul > li {
+  list-style: none;
+}
 
 /* fix table layout on the install page */
 table.table-custom-layout {
