docs: fix applications and donate pages
- Add back font-awesome icons (and switch from v4 to v5)
- Add back Github avatar styles

--- a/docs/_static/styles/custom.css
+++ b/docs/_static/styles/custom.css
@@ -151,3 +151,29 @@ table.table-custom-layout tbody tr td {
 table.table-custom-layout tbody tr td:first-of-type {
   vertical-align: top;
 }
+
+/*
+  Content
+*/
+
+.github-avatar {
+  float: left;
+  width: 150px;
+  height: 150px;
+  margin: 0 1rem 1rem 0;
+}
+.github-avatar + .container > ul > li {
+  list-style: none;
+}
+
+/*
+  Utils
+*/
+
+.clearfix:before, .clearfix:after {
+  display: table;
+  content: "";
+}
+.clearfix:after {
+  clear: both;
+}
