docs: remove Open Collective
- Rewrite the documentation's donate page
  - Remove donation infos from individual team members
  - Add all team members
  - Fix GitHub username regex in Sphinx extension
- Rewrite the project README
  - Use HTML for centered text, add logo, update badges
  - Rephrase text sections
  - Remove Open Collective and update support section
- Replace all links to Open Collective with a link to the latest docs

--- a/docs/_static/styles/custom.css
+++ b/docs/_static/styles/custom.css
@@ -288,14 +288,16 @@ table.table-custom-layout.table-custom-layout-dependencies tbody td {
   Content
 */
 
-.github-avatar {
-  float: left;
-  width: 150px;
-  height: 150px;
-  margin: 0 1rem 1rem 0;
-}
-.github-avatar + .container > ul > li {
+.team-members {
+  display: flex;
   list-style: none;
+  justify-content: space-between;
+}
+.team-members a:after {
+  display: none !important;
+}
+.team-members figcaption a.headerlink {
+  display: none;
 }
 
 section#plugins dl.field-list {
