docs: rewrite install page
- Add header grid-cards for quickly choosing the OS or PyPI package
- Rename "AppImages" section to "Linux AppImages"
- Greatly reduce noise in the "Windows binaries" and "Linux AppImages"
  sections by replacing texts and lists with grid-cards and tables,
  and remove "stable/nightly builds" sub-sections respectively
- Add SVG logos for Python and FFmpeg, obtained from original sources,
  with slight modifications and optimizations applied
- Move up "Dependencies" section by one level
- Rewrite some texts for better clarity and fix some grammar errors
- Upgrade font-awesome from 5 to 6

--- a/docs/_static/styles/custom.css
+++ b/docs/_static/styles/custom.css
@@ -89,18 +89,18 @@ strong.command {
   font-style: normal;
 }
 
-a[href^="http://"]:not(.muted-link),
-a[href^="https://"]:not(.muted-link):not([href^="https://streamlink.github.io/"]) {
+a[href^="http://"]:not(.muted-link):not(.sd-badge),
+a[href^="https://"]:not(.muted-link):not(.sd-badge):not([href^="https://streamlink.github.io/"]) {
   display: inline-block;
   word-break: break-word;
 }
 
-a[href^="http://"]:not(.no-external-link-icon):not(.muted-link)::after,
-a[href^="https://"]:not(.no-external-link-icon):not(.muted-link):not([href^="https://streamlink.github.io/"])::after {
+a[href^="http://"]:not(.no-external-link-icon):not(.muted-link):not(.sd-badge)::after,
+a[href^="https://"]:not(.no-external-link-icon):not(.muted-link):not(.sd-badge):not([href^="https://streamlink.github.io/"])::after {
   content: "\f35d";
   display: inline-block;
   padding-left: .4em;
-  font: 900 .6em "Font Awesome 5 Free";
+  font: 900 .6em "Font Awesome 6 Free";
   vertical-align: middle;
   text-decoration: none;
 }
@@ -287,6 +287,22 @@ table.table-custom-layout.table-custom-layout-dependencies tbody td {
 /*
   Content
 */
+
+.installation-grid .fab {
+  font-size: 5em;
+}
+
+.grid-with-icons .fas {
+  padding-right: 0.1em;
+  font-size: 1.75em;
+  vertical-align: middle;
+}
+
+.grid-with-images img {
+  width: auto;
+  max-height: 3em;
+  filter: grayscale(1);
+}
 
 .team-members {
   display: flex;
