Add custom css for compatibility colors

--- a/docs/_static/styles/custom.css
+++ b/docs/_static/styles/custom.css
@@ -344,3 +344,14 @@ section#plugins dl.field-list li {
 .clearfix:after {
   clear: both;
 }
+
+/*
+  Tables
+*/
+.yes {
+    color: green;
+}
+
+.no {
+    color: red;
+}
