docs: reformat acknowledgements section
- Use the card directive instead of an unordered list
- Add GitHub logos from brand.github.com/foundations/logo

--- a/docs/_static/styles/custom.css
+++ b/docs/_static/styles/custom.css
@@ -296,6 +296,10 @@ details.sd-dropdown .sd-summary-content {
   Content
 */
 
+.acknowledgements img {
+  max-width: 8rem;
+}
+
 .installation-grid .fab {
   font-size: 5em;
 }
